[template] Added Resilience4j circuit breaker to downstream
* Added nft scenario that triggers cb to open and close (assertions are not fixed yet)

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ ext {
             spring    : "5.2.6.RELEASE",
             junit     : [
                     jupiter: "5.5.2"
-            ]
+            ],
+            resilience4jVersion: "1.7.1"
     ]
 }
