--- a/service/build.gradle
+++ b/service/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-project.version = project.properties.getOrDefault('testVersion', "0.8.0")
+project.version = project.properties.getOrDefault('testVersion', "0.10.0")
 apply from: "repo-tasks.gradle"
 apply from: "helm-tasks.gradle"
 
@@ -28,6 +28,10 @@ dependencies {
         exclude group: 'io.micrometer', module: 'micrometer-core'
     }
     compile("org.springframework.boot:spring-boot-starter-validation:${versions.springBoot}")
+    compile "io.github.resilience4j:resilience4j-spring-boot2:${versions.resilience4jVersion}"
+    compile "io.github.resilience4j:resilience4j-reactor:${versions.resilience4jVersion}"
+    compile "io.github.resilience4j:resilience4j-prometheus:${versions.resilience4jVersion}"
+    compile "io.github.resilience4j:resilience4j-micrometer:${versions.resilience4jVersion}"
     compile 'io.micrometer:micrometer-registry-prometheus:1.6.0'
     compile 'com.fasterxml.jackson:jackson-bom:2.9.8'
     compile 'com.google.guava:guava:27.1-jre'
