[template] Added yoda-speech downstream and used the quota on it (to test 2 downstreams in a row)
* added mocks, app config
* moved some classes to different packages to improve structure
* added some ft config for cb. we dont care about it yet so we ll go with the ft specific one

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -21,4 +21,11 @@ service:
     host: ${QUOTE_RANDOM_URL:localhost}
     port: ${QUOTE_RANDOM_PORT:9090}
     path: ${QUOTE_RANDOM_PATH:/random/quote}
+  #    readinessPath: ${QUOTE_RANDOM_READINESS_PATH:/}
+
+  yoda-speech:
+    scheme: http
+    host: ${QUOTE_RANDOM_URL:localhost}
+    port: ${QUOTE_RANDOM_PORT:9090}
+    path: ${QUOTE_RANDOM_PATH:/translate/yoda}
 #    readinessPath: ${QUOTE_RANDOM_READINESS_PATH:/}
