--- a/service/src/main/resources/application-int.yml
+++ b/service/src/main/resources/application-int.yml
@@ -23,4 +23,11 @@ service:
     host: ${QUOTE_RANDOM_URL:tronalddump.io}
     port: ${QUOTE_RANDOM_PORT:80}
     path: ${QUOTE_RANDOM_PATH:/random/quote}
-#    readinessPath: ${QUOTE_RANDOM_READINESS_PATH:/}
+  #    readinessPath: ${QUOTE_RANDOM_READINESS_PATH:/}
+
+  yoda-speech:
+    scheme: ${QUOTE_RANDOM_SCHEME:https}
+    host: ${QUOTE_RANDOM_URL:api.funtranslations.com}
+    port: ${QUOTE_RANDOM_PORT:80}
+    path: ${QUOTE_RANDOM_PATH:/translate/yoda}
+#    readinessPath: ${YODA_SPEECH_READINESS_PATH:/}
