--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,11 @@ buildscript {
 }
 
 wrapper {
-    gradleVersion = "5.6.1"
+    gradleVersion = "7.3.1"
 }
 
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'io.franzbecker.gradle-lombok'
 
     group = 'framework.templates.springbootwebflux'
