--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -21,11 +21,11 @@ repositories {
 }
 
 dependencies {
-    compile("com.github.tomakehurst:wiremock:2.23.2")
-    compile "ch.qos.logback:logback-classic:1.2.3"
-    runtime "net.logstash.logback:logstash-logback-encoder:4.11"
+    implementation "com.github.tomakehurst:wiremock:2.23.2"
+    implementation "ch.qos.logback:logback-classic:1.2.3"
+    implementation "net.logstash.logback:logstash-logback-encoder:4.11"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
 
 shadowJar {
