--- a/service-nft/build.gradle
+++ b/service-nft/build.gradle
@@ -27,8 +27,8 @@ ext {
 }
 
 dependencies {
-    compile 'io.gatling.highcharts:gatling-charts-highcharts:3.0.3'
-    compile "commons-codec:commons-codec:1.13"
+    implementation 'io.gatling.highcharts:gatling-charts-highcharts:3.0.3'
+    implementation "commons-codec:commons-codec:1.13"
 }
 
 project.version = '0.12.0'
