--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -21,11 +21,9 @@ repositories {
 }
 
 dependencies {
-    implementation "com.github.tomakehurst:wiremock:2.23.2"
-    implementation "ch.qos.logback:logback-classic:1.2.3"
-    implementation "net.logstash.logback:logstash-logback-encoder:4.11"
-
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.github.tomakehurst:wiremock:2.27.2'
+    implementation 'ch.qos.logback:logback-classic:1.2.7' //non straight forward upgrade to 1.3.7 or 1.4.7
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
 }
 
 shadowJar {
