[template] Upgraded service dependencies
* Disabled jars where not needed
* Fixed docker-compose nft mappings and profiles
* Added permissions for scripts in Dockerfiles

--- a/service-functional/build.gradle
+++ b/service-functional/build.gradle
@@ -30,9 +30,7 @@ dependencies {
     test.useJUnitPlatform()
 }
 
-jar {
-    enabled = true
-}
+jar.enabled = false
 
 task localFunctional(type: JavaExec) {
     group = 'Verification'
