--- a/service-mocks/Dockerfile
+++ b/service-mocks/Dockerfile
@@ -4,10 +4,11 @@ ENV WIREMOCK_VERSION 2.23.2
 
 WORKDIR /wiremock
 
+COPY scripts/start_app.sh /
+RUN ["chmod", "+x", "/start_app.sh"]
 COPY build/libs/service-mocks.jar service-mocks.jar
 COPY src/main/resources/mappings /data/mappings/mappings/
 COPY src/main/resources/mappings-nft /data/mappings-nft/mappings/
-COPY scripts/start_app.sh /
 
 CMD ["/start_app.sh"]
 
