--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -3,13 +3,13 @@ buildscript {
         gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.bmuschko:gradle-docker-plugin:6.6.1'
+        classpath 'com.bmuschko:gradle-docker-plugin:9.4.0'
     }
 }
 
 plugins {
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '5.1.0' apply true
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 mainClassName = "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner"
@@ -34,7 +34,7 @@ jar.dependsOn 'shadowJar'
 
 run {
     args = [
-            '--port=9090',
+            '--port=8181',
             '--global-response-templating',
             '--container-threads=200',
             '--jetty-acceptor-threads=50',
