--- a/service-functional/build.gradle
+++ b/service-functional/build.gradle
@@ -18,9 +18,7 @@ dependencies {
     implementation 'org.assertj:assertj-core:3.24.2'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'org.apache.commons:commons-collections4:4.4'
-    // Fixes running tests in IntelliJ - don't set as runtime dependency, breaks remote functional tests
-    implementation "org.springframework:spring-tx:${versions.spring}"
-    implementation "org.springframework.boot:spring-boot-starter-test:2.3.12.RELEASE"
+    implementation "org.springframework.boot:spring-boot-starter-test:2.7.18"
     implementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
