--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -22,8 +22,8 @@ repositories {
 
 dependencies {
     implementation 'com.github.tomakehurst:wiremock:2.27.2'
-    implementation 'ch.qos.logback:logback-classic:1.2.7' //non straight forward upgrade to 1.3.7 or 1.4.7
-    implementation 'net.logstash.logback:logstash-logback-encoder:7.3'
+    implementation 'ch.qos.logback:logback-classic:1.2.12' // depending on spring logging
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.3' // for 7.4 we need logback-classis 1.4
 }
 
 shadowJar {
