[template] Upgraded to latest gradle and Java 21
* Upgraded most of other dependencies, before spring 3

--- a/service-nft/Dockerfile
+++ b/service-nft/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:11
+FROM openjdk:21-rc-jdk-oracle
 
 COPY scripts/runGatlingTest.sh /opt/gatling/
 RUN ["chmod", "+x", "/opt/gatling/runGatlingTest.sh"]
