--- a/build.gradle
+++ b/build.gradle
@@ -4,30 +4,27 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.franzbecker:gradle-lombok:5.0.0'
+        classpath 'io.freefair.gradle:lombok-plugin:8.4'
     }
 }
 
 wrapper {
-    gradleVersion = "7.3.1"
+    gradleVersion = "8.5"
 }
 
 subprojects {
     apply plugin: 'java-library'
-    apply plugin: 'io.franzbecker.gradle-lombok'
+    apply plugin: 'io.freefair.lombok'
 
     group = 'framework.templates.springbootwebflux'
     version = '0.0.1-SNAPSHOT'
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
 }
 
 ext {
     versions = [
             springBoot: "2.7.18",
-            junit     : [
-                    jupiter: "5.8.2" //for later we need spring boot 3
-            ],
-            resilience4jVersion: "1.7.1" //needs java17
+            resilience4jVersion: "2.1.0"
     ]
 }
