--- a/service-functional/build.gradle
+++ b/service-functional/build.gradle
@@ -3,10 +3,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(":service") //for this to work in spring boot, we need to enable jar in service module
-    implementation(project(":service-mocks")) {
-        exclude group: "javax.servlet", module: "javax.servlet-api"
-    }
+    implementation project(":service")
     implementation project(":service").sourceSets.main.output
     implementation project(":service-mocks").sourceSets.main.output
 
@@ -18,13 +15,11 @@ dependencies {
     implementation 'org.assertj:assertj-core:3.24.2'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation "org.springframework.boot:spring-boot-starter-test:2.7.18"
-    implementation 'com.github.tomakehurst:wiremock-jre8:2.35.0'
+    implementation 'com.github.tomakehurst:wiremock-jre8:2.35.0' // probably needs spring 3?
+    implementation 'ch.qos.logback:logback-classic:1.2.12' // needs spring 3
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.3' // for 7.4 we need logback-classis 1.4
+    implementation "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.2.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     test.useJUnitPlatform()
 }
 
