--- a/service-mocks/build.gradle
+++ b/service-mocks/build.gradle
@@ -4,15 +4,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.bmuschko:gradle-docker-plugin:9.4.0'
+        classpath "com.github.johnrengelman:shadow:8.1.1"
     }
 }
 
-plugins {
-    id 'application'
-    id 'com.github.johnrengelman.shadow' version '7.1.2'
-}
+apply plugin: 'application'
+apply plugin: 'com.github.johnrengelman.shadow'
 
-mainClassName = "com.github.tomakehurst.wiremock.standalone.WireMockServerRunner"
+mainClassName = "wiremock.Run"
 project.version = project.properties.getOrDefault('testVersion', "0.4.0")
 apply from: "repo-tasks.gradle"
 apply from: "helm-tasks.gradle"
@@ -21,8 +20,10 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.github.tomakehurst:wiremock:2.27.2'
-    implementation 'ch.qos.logback:logback-classic:1.2.12' // depending on spring logging
+    implementation('org.wiremock:wiremock:3.3.1') {
+        exclude group: "org.slf4j"
+    }
+    implementation 'ch.qos.logback:logback-classic:1.2.12' // needs spring 3
     implementation 'net.logstash.logback:logstash-logback-encoder:7.3' // for 7.4 we need logback-classis 1.4
 }
 
