--- a/service/build.gradle
+++ b/service/build.gradle
@@ -24,39 +24,28 @@ repositories {
 
 dependencies {
     api "org.springframework.boot:spring-boot-starter-webflux:${versions.springBoot}"
-    implementation("org.springframework.boot:spring-boot-starter-actuator:${versions.springBoot}") {
-        exclude group: 'io.micrometer', module: 'micrometer-core'
-    }
+    implementation("org.springframework.boot:spring-boot-starter-actuator:${versions.springBoot}")
     implementation "org.springframework.boot:spring-boot-starter-validation:${versions.springBoot}"
+
     implementation "io.github.resilience4j:resilience4j-spring-boot2:${versions.resilience4jVersion}"
     implementation "io.github.resilience4j:resilience4j-reactor:${versions.resilience4jVersion}"
-    implementation "io.github.resilience4j:resilience4j-prometheus:${versions.resilience4jVersion}"
+    implementation "io.github.resilience4j:resilience4j-prometheus:1.7.1"
     implementation "io.github.resilience4j:resilience4j-micrometer:${versions.resilience4jVersion}"
-    implementation 'io.micrometer:micrometer-registry-prometheus:1.10.5'
-    implementation 'com.fasterxml.jackson:jackson-bom:2.14.2'
-    implementation 'com.google.guava:guava:31.1-jre'
+
+    implementation 'io.micrometer:micrometer-registry-prometheus:1.12.1'
     implementation 'io.prometheus:simpleclient_hotspot:0.16.0'
-    implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.json:json:20230227'
+    implementation 'org.json:json:20231013'
 
     testImplementation "org.springframework.boot:spring-boot-starter-test:${versions.springBoot}"
     testImplementation 'io.projectreactor:reactor-test'
-    testImplementation 'org.mockito:mockito-core:5.8.0'
-    testImplementation 'org.mockito:mockito-junit-jupiter:5.8.0'
-    testImplementation 'net.bytebuddy:byte-buddy:1.14.2' //for some reason it is needed but not included in mockito-core
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${versions.junit.jupiter}"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:${versions.junit.jupiter}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${versions.junit.jupiter}"
+
+    test.useJUnitPlatform()
 }
 
 jar.enabled = false
 bootJar {
-    archiveBaseName = 'service'
-    archiveVersion = ''
-}
-
-test {
-    useJUnitPlatform()
+    archiveBaseName.set('service')
+    archiveVersion.set('')
 }
 
 check.finalizedBy(tasks.getByPath(':service-functional:check'))
