--- a/service/build.gradle
+++ b/service/build.gradle
@@ -25,6 +25,7 @@ repositories {
 dependencies {
     api "org.springframework.boot:spring-boot-starter-webflux:${versions.springBoot}"
     implementation("org.springframework.boot:spring-boot-starter-actuator:${versions.springBoot}")
+    implementation("org.springframework.boot:spring-boot-starter-aop:${versions.springBoot}")
     implementation "org.springframework.boot:spring-boot-starter-validation:${versions.springBoot}"
 
     implementation "io.github.resilience4j:resilience4j-spring-boot2:${versions.resilience4jVersion}"
@@ -33,6 +34,9 @@ dependencies {
     implementation "io.github.resilience4j:resilience4j-micrometer:${versions.resilience4jVersion}"
 
     implementation 'io.micrometer:micrometer-registry-prometheus:1.12.1'
+    implementation 'io.micrometer:micrometer-observation:1.12.2'
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.2.2'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave:3.1.0'
     implementation 'io.prometheus:simpleclient_hotspot:0.16.0'
     implementation 'org.json:json:20231013'
 
